--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <ul class="navbar-nav ml-auto">
         <li><%= link_to "Home", home_path, :class => "nav-link"%></li>
         <li><%= link_to "View Job", viewJob_path, :class => "nav-link"%></li>
-        <li><%= link_to "Create Job", addJob_path, :class => "nav-link"%></li>
+        <li><%= link_to "New Job", new_path, :class => "nav-link"%></li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
