--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Job Portal</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
 
-  <body> 
+<head>
+  <title>Job Portal</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+
+<body style="position: relative; min-height:100%;">
   <!-- Navigation -->
+  <% if logged_in? %>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Job Portal</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-        <li><%= link_to "Home", home_path, :class => "nav-link"%></li>
-        <li><%= link_to "View Job", viewJob_path, :class => "nav-link"%></li>
-        <li><%= link_to "New Job", new_path, :class => "nav-link"%></li>
-        <li><%= link_to "Login", welcome_path, :class => "nav-link"%></li>
+          <li style="color:lightgrey; margin-right:20px; margin-top:7px;"><%= current_user.username %></li>
+          <li><%= link_to "View Job", viewJob_path, :class => "nav-link"%></li>
+          <li><%= link_to "New Job", new_path, :class => "nav-link"%></li>
+          <li><%= link_to "Logout", logout_path, :class => "nav-link"%></li>
         </ul>
       </div>
     </div>
   </nav>
+  <% else %>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Job Portal</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li><%= link_to "View Job", viewJob_path, :class => "nav-link"%></li>
+          <li><%= link_to "New Job", new_path, :class => "nav-link"%></li>
+          <li><%= link_to "Login", login_path, :class => "nav-link"%></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <%end%>
 
   <div class="container">
     <%= yield %>
   </div>
-  </body>
-
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5 bg-dark" id="footer">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
   </footer>
+</body>
+
 </html>
