--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,26 @@
-<h1>Sign Up</h1>
-<%= form_for @user do |f|%>
-  <%= f.label :username%><br>
-  <%= f.text_field :username%><br>
-  <%= f.label :password%><br>
-  <%= f.password_field :password%><br>
-  <%= f.submit %>
-<%end%>
+<div class="limiter">
+  <div class="container" style="margin-top:60px;">
+     <h1>Sign Up</h1>
+     <%= form_for @user do |f|%>
+     <div class="input-group input-group-lg" style="margin-top:60px;">
+        <span class="input-group-addon" id="sizing-addon1" style="margin-right:10px;"><%= f.label :username%></span>
+        <%= f.text_field :username, class: 'form-control'%>
+     </div>
+     <br>
+     <div class="input-group">
+        <span class="input-group-addon" id="sizing-addon3" style="margin-right:14px;"><%= f.label :password %></span>
+        <%= f.password_field :password, class: 'form-control'%>
+     </div>
+     <br>
+     <br>
+     <div>
+        <div class="container-login100-form-btn m-t-17" style="display:inline-block">
+           <%= f.submit "Sign Up", class: "btn btn-success" %>
+        </div>
+        <% end %>
+        <div class="container-login100-form-btn m-t-17" style="display:inline-block">
+           <%= button_to "Back", '/login', method: :get, class: "btn btn-primary" %>
+        </div>
+     </div>
+  </div>
+</div>
